...
                android:orientation="horizontal"
                android:padding="8dp"
                android:translationZ="@dimen/cardview_default_elevation"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/headerImage"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@{album.cover}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/cover_album" />

                <TextView
                    android:id="@+id/albumName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:paddingStart="8dp"
                    android:paddingTop="3dp"
                    android:paddingEnd="8dp"
...
