...
                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{comment.rating}" />
                <TextView
                    android:id="@+id/albumDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{comment.description}" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
...
