<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/page_inicio"
        android:icon="@drawable/icon_inicio"
        android:title="@string/title_inicio" />

    <item
        android:id="@+id/albumFragment"
        android:icon="@drawable/icon_albumes"
        android:title="@string/title_albums"/>

    <item
        android:id="@+id/trackFragment"
        android:icon="@drawable/icon_canciones"
        android:title="@string/title_tracks"/>

    <item
        android:id="@+id/artistFragment"
        android:icon="@drawable/icon_artistas"
        android:title="@string/title_artists"/>

    <item
        android:id="@+id/collectorsFragment"
        android:icon="@drawable/icon_collector"
        android:title="@string/title_collectors"/>

</menu>